--- a/style.css
+++ b/style.css
@@ -73,11 +73,19 @@ body {
     color: var(--Dark-Raspberry);
 }
 
+.prep-card strong {
+    font-weight:600;
+}
 .card h2 {
     font-family: Young_Serif;
     color: var(--Nutmeg);
 }
+
+.instructions strong {
+    font-weight: 600;
+}
 hr {
+    border-color: rgb(255, 255, 255);
     margin: 20px 0px;
 }
 
@@ -93,14 +101,15 @@ section ul li strong{
 }
 
 .nutrition ul {
+    width: 50%;
     list-style-type: none;
     display: flex;
-    align-items: flex-end;
+    justify-content:space-between;
 }
 
-.nutrition ul li{
-    margin: 0;
-
+.nutrition ul li .data {
+    color: var(--Nutmeg);
+    font-weight: 600;
 }
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
